fixing adminbar on ie8

--- a/deme_django/static/css/deme.css
+++ b/deme_django/static/css/deme.css
@@ -5012,7 +5012,6 @@ body.nonadmin #metabar {
 .adminbar .nav.breadcrumbs {
   border-left: 1px solid rgba(255, 255, 255, 0.15);
   border-right: 1px solid rgba(255, 255, 255, 0.15);
-  max-width: 90%;
   padding-bottom: 2px;
 }
 .adminbar .nav.breadcrumbs > li {
