--- a/deme_django/static/less/deme/adminbar.less
+++ b/deme_django/static/less/deme/adminbar.less
@@ -37,6 +37,8 @@ body {
     position: absolute;
     left: 0;
   }
+  .navbar-nav {
+  }
   .nav {
     white-space: nowrap;
     > li > a {
@@ -87,7 +89,7 @@ body {
     &.breadcrumbs {
       border-left: 1px solid fade(@white, 15%);
       border-right: 1px solid fade(@white, 15%);
-      max-width: 90%;
+      //max-width: 90%;
       padding-bottom: 2px;
       > li{
         display: inline-block;
